# doc-chatbot

./: .env_production_template  .gitignore  Dockerfile.frontend  README.md  docker-compose.yml  next.config.mjs  package.json  requirement.md
.github/workflows/: ci.yml
app/: globals.css  layout.tsx
app/(auth)/login/: page.tsx
app/(auth)/register/: page.tsx
app/(dashboard)/: layout.tsx
app/(dashboard)/documents/: page.tsx
app/(dashboard)/documents/[id]/: page.tsx
app/(dashboard)/upload/: page.tsx
backend/: Dockerfile  db_test.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  chat.py  documents.py
backend/app/core/: cache.py  config.py  database.py  security.py  storage.py
backend/app/models/: __init__.py  chat.py  document.py  user.py
backend/app/schemas/: chat.py  document.py  user.py
backend/app/services/: document_processor.py  embeddings.py  llm.py  transcription.py
backend/doc_chatbot_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_auth.py  test_chat.py  test_documents.py  test_services.py
components/layout/: sidebar.tsx
lib/: api.ts  auth.ts
